--- a/curriculum-front/src/style/index.css
+++ b/curriculum-front/src/style/index.css
@@ -1,5 +1,5 @@
 @import './base/_general.css';
-@import './base/_variables.css';
 @import './components/_home.css';
 @import './components/_upsert.css';
-@import './components/_display-curricula.css'
+@import './components/_display-curricula.css';
+@import './components/_create-curriculum.css';
